final/public/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

/* =-=-=-= FONTS =-=-=-= */
* {
    font-family: "Poppins", sans-serif;
    scrollbar-color: #888 transparent;
    scrollbar-width: thin;
}

/* =-=-=-= MAIN =-=-=-= */
body {
    font-family: "Poppins", sans-serif;
    overflow-x: hidden;
}
main {
    min-height: 90vh;
}

aside {
    width: 25%;
}

/* =-=-=-= EASTER EGG =-=-=-= */
#easterEggContainer {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    pointer-events: none; 
    z-index: 999;
}

#easterEggContainer img {
    position: absolute;
    transition: transform 0.3s ease;
}

#easterEggButton {
    font-weight: 400;
    font-size: 17.5px;
}

/* =-=-=-= NAVIGATION BAR =-=-=-= */
nav {
    display: flex !important;  
    align-items: center;
    justify-content: space-between;
    width: 100%;
    height: 10vh;
    box-shadow: 1px 1px 2px 1px rgba(94, 93, 93, 0.8);
    padding: 0 10px;
}

.navbar {
    font-family: "Poppins", sans-serif;
    font-weight: 600; 
    font-size: 17.5px;
    position: sticky; 
    top: 0;
    width: 100%;
    z-index: 1000; 
}

.navbar-collapse {
    background-color: white;
    z-index: 1050;  
}

.navbar-nav {
    padding: 1rem; 
}

nav ul {
    list-style-type: none;
    margin: 0;
    display: flex; 
    gap: 20px;
    padding-right: 10px;
}

nav a {
    padding-right: 20px; 
    text-decoration: none;
    display: inline-block;
    color: black;
    font-size: 17.5px;
    font-weight: 550;
    transition: color 0.1s ease;
}

nav li#active a {
    color: rgb(160, 158, 158);;  
}

nav a:hover {
    color: rgb(160, 158, 158);
}

nav img {
    width: 80px;
    height: 80px;
}

nav #title {
    font-weight: 550;
    font-size: 35px; 
    margin-left: 0;
    text-align: left; 
    flex-grow: 1; 
    flex-shrink: 0; 
    white-space: nowrap;
    padding-left: 10px;
}

/* =-=-=-= MAP =-=-=-= */


#login-section {
    width: 40vw;
    height: 35vh;
    background-color: #fff;
    border-radius: 20px;
    margin: auto;
    box-shadow: 0px 4px 4px 0px rgba(37, 36, 36, 0.8);
    margin: auto;
    padding-top: 3vh;
}
#map {
    height: 60vh;
    background-color: lightgray;
}
aside {
    height: auto;
}
#bus-data {
    max-height: 40vh;
    overflow-y: auto;
}
.bus-time-record {
    padding: 10px;
    border-bottom: 1px solid #ddd;
}
.search-container button {
    background: #ddd;
    border: none;
}
.search-container button:hover {
    background: #ccc;
}
footer {
    background-color: white;
    text-align: center;
    padding: 10px 0;
    box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
}

#login-container {
    padding-top: 20vh;
}

#login-section h1 {
    text-align: center;
}

#login-section form {
    margin: auto;
    width: 70%;
}

#login-section input {
    padding-left: 10px;
    width: 100%;
    height: 5vh;
    margin-top: 2vh;
    border-radius: 5px;
    border-width: 1px;
}

#login-button {
    transition-duration: 0.4s;
    width: 100%;
    height: 5vh;
    margin-top: 2vh;
    border-radius: 5px;
    border-width: 0px;
    color: black;
    background-color: rgb(216, 216, 216) ;
}

#login-button:hover {
    background-color: rgb(73, 73, 73);
    color: white;
}

.map-button, .map-button-reset {
    background: #C9C6C2;
    border-radius: 5px;
    padding: 2px;
    cursor: pointer;
    z-index: 500;
}

.leaflet-top, .leaflet-bottom {
    z-index: 500 !important; 
}

.map-button button, .map-button-reset button {
    position: relative;
    width: 30px; 
    height: 30px; 
    background-color: #ffffff;
    color: rgb(0, 0, 0);
    border: none;
    border-radius: 3px;
    padding: 8px 16px;
    cursor: pointer;
    font-size: 14px; 
    display: flex;                  
    align-items: center;            
    justify-content: center;
}

.map-button button:hover {
    background-color: #F4F4F4;
}

.user-location-marker {
    width: 18px;
    height: 18px;
    background-color: #4285f4; 
    border: 2px solid white;  
    border-radius: 50%;        
    box-shadow: 0 0 18px rgba(66, 133, 244, 0.6); 
    position: relative;
}

.user-location-marker::after {
    content: "";
    width: 6px;
    height: 6px; 
    border-radius: 50%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

/* =-=-=-= FOOTER =-=-=-= */
footer p {
    font-size: 0.8rem;
    margin: 0; 
}

#footer-link {
    text-decoration: none;
    color: black;
}

/* =-=-=-= BUS TIMES PANEL =-=-=-= */
.bus-time-record {
    width: 100%;
    justify-content: space-between;
    display: flex;
    flex-wrap: wrap;
    padding: 0;
    margin: 0;
}

.bus-time-record .times {
    text-align: right;
}

.bus-time-record .destination {
    font-size: 18px;
}

button.btn-link.number {
    background: none; 
    border: none;    
    color: #FF9800;   
    font-size: 18px;  
    cursor: pointer; 
    padding: 0;      
    text-decoration: none; 
    margin-right: 10px; 
}

button.btn-link.number:hover {
    color: #ffab2c;  
    text-decoration: none; 
}

/* =-=-=-= SCROLL BAR FOR BUS TIMES PANEL =-=-=-= */
::-webkit-scrollbar {
    width: 8px;
    background: transparent;
}

::-webkit-scrollbar-thumb {
    background: #888;
    border-radius: 4px;
}

/* =-=-=-= TIMETABLES PAGE =-=-=-= */
.pdf {
    width: 100%;
    height: 1000px;
}

/* =-=-=-= Notification popups =-=-=-= */
#notification-container {
    position: fixed;
    bottom: 20px;
    left: 20px;
    z-index: 9999;
}

.notification {
    padding: 10px 15px;
    margin-bottom: 10px;
    border-radius: 4px;
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
    opacity: 0;
    transition: opacity 0.3s ease-in-out;
}

.notification-warning {
    background-color: #fcf8e3;
    border-left: 4px solid #f0ad4e;
}

.notification-error {
    background-color: #f2dede;
    border-left: 4px solid #d9534f;
}

.notification-info {
    background-color: #d9edf7;
    border-left: 4px solid #5bc0de;
}


/* =-=-=-= RESPONSIVE PHONES =-=-=-= */
@media (max-width: 992px) and (hover: none) and (pointer: coarse){
    body {
        overflow: hidden;
    }

    main {
        padding: 0;
    }

    aside {
        width: 100%;
    }

    #bus-data {
        max-height: 90vh;
    }

    header nav{
        height: 80px;
    }

    nav img {
        width: 50px;
        height: 50px;
    }

    footer {
        visibility: hidden;
        display: none;
        height: 0;
    }

    #login-section {
        width: 80vw;
        height: 35vh;
    }

    /* Index Page CSS */
    .index-page {
        body {
            overflow: hidden;
            margin: 0;
            padding: 0;
        }
        
        main {
            padding: 0;
            margin: 0;
        }
        
        aside {
            width: 100%;
        }
        
        #map {
            height: 75vh;
            margin-top: 0;
            padding-top: 0;
            position: relative;
            top: 0;
        }
        
        #bus-data {
            max-height: 90vh;
        }
        
        header {
            background-color: transparent;
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            z-index: 1000;
            box-shadow: none;
            height: auto;
        }

        .navbar-toggler:focus {
            outline: none;
            box-shadow: none;
        }
        
        .navbar-toggler {
            position: relative;
            z-index: 3000;
        }

        nav .logo {
            height: 0;
            visibility: hidden;
        }
        
        .navbar {
            background-color: transparent !important;
            box-shadow: none !important;
            padding: 0;
        }
        
        .navbar .container-fluid {
            justify-content: flex-end;
        }
        
        .navbar-toggler {
            background: #C9C6C2 !important;
            border-radius: 5px !important;
            padding: 2px;
            cursor: pointer;
            border: none;
            position: absolute;
            top: 10px;
            right: 2px;
            width: 36px;
            height: 36px;
            display: flex;
            align-items: center;
            justify-content: center;
            pointer-events: auto;
            z-index: 9999; 
        }
        
        .navbar-toggler-icon {
            background-color: white; 
            color: black; 
            border: none;
            border-radius: 3px;
            padding: 16px; 
            cursor: pointer;
            font-size: 14px;
            display: flex;
            align-items: center;
            justify-content: center;
            width: 100%; 
            height: 100%;
        }
        
        .navbar-collapse {
            background-color: white;
            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
            z-index: 9998 !important;
        }
        
        nav img {
            width: 50px;
            height: 50px;
        }

        .leaflet-top .map-button-reset {
            margin-top: 55px !important; 
        }

        .leaflet-top {
            padding-left: 12px;
            padding-right: 12px;
        }
        
        footer {
            visibility: hidden;
            display: none;
            height: 0;
        }
        
        #login-section {
            width: 80vw;
            height: 35vh;
        }
    }
}

@media (min-width: 768px) {
    #map {
        height: 90vh;
    }
    #bus-data {
        max-height: 90vh;
    }
}

